cabal-version:      2.4
name:               action-parse-asdf-tool-versions
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kenichi Kamiya
maintainer:         kachick1@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Asdf.Parser
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable action-parse-asdf-tool-versions
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , action-parse-asdf-tool-versions
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite action-parse-asdf-tool-versions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Asdf.ParserSpec
  build-depends:       base
                     , action-parse-asdf-tool-versions
                     , hspec
                     , QuickCheck
  build-tool-depends: , hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
